[package]
name = "dbgtop"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
toml = "0.8.19"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
async-trait = "0.1.81"
